--- a/Lyrics.html
+++ b/Lyrics.html
@@ -15,7 +15,7 @@ Not just anyone<br>Never ending chase <br>Just to find your place <br> No more w
 <audio controls autoplay muted><source src="FMYMUSIV.mp3" type="audio/mpeg"></audio>
 </br><hr><h3 class="fonty"<span style="color:red"><b>
 
-<a href ="ECP.html"> Home </a>&nbsp; &nbsp;<a href ="Contact.html"> Contact </a>&nbsp;&nbsp; Lyrics&nbsp;&nbsp;<a href ="remixes.html"> Remixes</a>
+<a href ="index.html"> Home </a>&nbsp; &nbsp;<a href ="Contact.html"> Contact </a>&nbsp;&nbsp; Lyrics&nbsp;&nbsp;<a href ="remixes.html"> Remixes</a>
 
 
 
