--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
 
 
 </p>
-</br><hr><b><h3 class="fonty"<span style="color:red"><a href ="ecp.html">Home</a>&nbsp; &nbsp;  Contact </a>&nbsp;&nbsp;<a href ="Lyrics.html"> Lyrics </a> &nbsp;&nbsp;<a href ="remixes.html"> Remixes</b>
+</br><hr><b><h3 class="fonty"<span style="color:red"><a href ="index.html">Home</a>&nbsp; &nbsp;  Contact </a>&nbsp;&nbsp;<a href ="Lyrics.html"> Lyrics </a> &nbsp;&nbsp;<a href ="remixes.html"> Remixes</b>
 
 </center>
 
