--- a/remixes.html
+++ b/remixes.html
@@ -15,7 +15,7 @@
 <p><img src="soundcloud.jpg" width="200" height="100"></p>
 <h2 class="hotnews"<span style ="color:white"> Over 80,000 Sondcloud users all over the world exposed to "Finding My Way" !!!
 </br><hr><h3 class="fonty"<span style="color:red"><b>
-<a href ="ECP.html"> Home </a>&nbsp;<a href ="Contact.html"> Contact </a>&nbsp;&nbsp;<a href ="Lyrics.html"> Lyric </a> &nbsp;&nbsp; Remixes</b>
+<a href ="index.html"> Home </a>&nbsp;<a href ="Contact.html"> Contact </a>&nbsp;&nbsp;<a href ="Lyrics.html"> Lyric </a> &nbsp;&nbsp; Remixes</b>
 
 
 
